--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+} 
 
 body {
   margin: 0 auto;
@@ -20,52 +20,15 @@ body {
   box-sizing: border-box;
 }
 
-img {
-  vertical-align: middle;
-}
-
-.container {
-  width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 14px;
-  padding-right: 14px;
-}
-
-.container:before, .container:after {
-  content: " ";
-  display: table;
-}
-
 *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.container:after {
-  clear: both;
-}
-
-.mb-0 {
-  margin-bottom: 0px;
-}
-
-.mt-0 {
-  margin-top: 0px;
-}
-
-.m-0 {
-  margin: 0px;
-}
-
 a {
   color: #373B47;
   text-decoration: none;
-}
-
-a:hover {
-  color: #E95853;
 }
 
 .text-uppercase {
@@ -75,59 +38,40 @@ a:hover {
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
 
 /*estilos del header*/
-header {
-  background-color: #ffffff;
-  height: 100px;
-  padding-left: 100px;
+
+.img-size {
+  height: 70px;
+  width: 70px;
+}
+
+.fixed {
   position: fixed;
-  margin: 0;
   top: 0;
-  width: 100%;
+  z-index: 1000;
 }
 
-figure {
-  display: inline-block;
-  padding-left: 500px
+.margin-top-96px {
+  margin-top: 96px;
 }
-
-figure .logo {
-  display: inline-block;
-  height: 55px;
-  width: 55px;
-}
-
-.text-uppercase a {
-  font-weight: bolder;
-  padding-left: 100px;
-}
-
 /*estilos de section class=container*/
 
-section.container {
+.bg-image {
   background-image: url(../assets/images/bg-home.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: #ffffff;
-  height: 536px;
-  margin-top: 100px;
   text-align: center;
   width: 100%;
 }
 
-.container h2 {
+.secondary-title--styles {
   font-size: 1.4em;
-  font-weight: lighter;
-  margin: 75px;
+  font-weight: bold;
 }
 
-.container h1 {
+.principal-title--styles {
   font-size: 3em;
   font-weight: 900;
-  margin-bottom: 10px;
-}
-
-.container p {
-  margin-bottom: 74px;
 }
 
 #button {
@@ -138,107 +82,113 @@ section.container {
   width: 150px;
 }
 
+#button:hover {
+  background-color: #3dd37cc9;
+  cursor: pointer;
+  transition: 0.5s 0.5s;
+}
+
 /* estilos de section class=services*/
 
-.services {
+.bg-pink {
   background-color: #f17c72;
   padding: 87px 0;
 }
 
-.services h2 {
-  color: #ffffff;
+.service-title-size {
   font-size: 2.2em;
   font-weight: bolder;
-  margin: 0;
-  text-align: center;
 }
 
-.services h4 {
-  color: #ffffff;
+.paragraph-size {
   font-size: 1em;
-  text-align: center;
+  line-height: 2em;
+  font-weight: bold;
 }
 
-.service-item {
-  display: inline-block;
-  margin: 20px;
-  width: 30%;
-}
 
-.service-item figure {
-  padding: 10px 20px;
-}
-
-.service-item img {
-  display: block;
-  margin: 10px 40px;
+.service-image--size {
   width: 180px;
+  height: 180px;
 }
 
-.service-item .description {
-  color: #ffffff;
-  display: block;
-  font-size: 1.1em;
-  text-align: center;
-}
-
-.service-item .description h5, h6 {
-  margin: 0;
+.service-item-size {
+  font-size: 0.8em;
+  font-weight: 900;
+  line-height: 1.5em
 }
 
 /*estilos de section class=work*/
 
-.work {
-  padding: 87px 0;
-}
-
-.work-description h2 {
-  color: #191919;
+.work-title-styles {
   font-size: 2.2em;
   font-weight: bolder;
-  margin: 0 0 30px;
-  text-align: center;
 }
 
-.work-description h4 {
+.work-paragraph-styles {
   color: #424242;
   text-align: center;
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 1.8em;
 
 }
 
-.work-description figure {
-  margin-left: 190px;
-  padding: 0;
+.work-image-size {
+  width: 80%;
+  height: 80%;
 }
 
-.work-image img {
-  width: 939px
-}
 
-.galery ul li {
-  color: #444444;
-  display: inline-block;
-  font-weight: bolder;
-  list-style: none;
-  margin: 20px 50px;
-  text-align: center;
-}
-
-.galery ul li img {
-  height: 250px;
-  width: 300px;
+.image-galery-size {
+  width: 90%;
 }
 
 /*estilos del footer*/
 
-.footer {
+.bg-footer {
   background-color: #373b47;
-  height: 71px;
-  padding: 20px;
+  padding: 20px ;
+} 
+
+/*HELPERS CLASSES */
+.mt-20 {
+  margin-top: 20px
 }
 
-.footer p {
-  color: #ffffff;
+.margin-40-0 {
+  margin: 40px 0;
+}
+
+.margin-0 {
   margin: 0;
-  text-align: center;
+}
+
+.padding-0 {
+  padding: 0;
+}
+
+.weight-bolder {
+  font-weight: bolder;
+}
+
+.margin-0-50 {
+  margin: 0 3.2em
+}
+
+.padding-0-50 {
+  padding: 0.8em 2.5em;
+}
+
+.padding-right-100px {
+  padding-right: 100px;
+
+}
+
+.mt-70px {
+  margin-top: 70px;
+}
+
+.pb-70px {
+  padding-bottom: 70px;
 }
